# core

./: .eslintignore  .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  cargo-runner-2.toml  config.toml  default_rx.toml  example-default.toml  example-downloaded.toml  example-leptos.toml  example-override.toml  example.toml  output.toml  package-lock.json  readme.md  rx.toml
crates/cargo-runner/: .gitignore  Cargo.toml  package-lock.json  package.json
crates/cargo-runner/src/: cargo_runner.rs  extension.ts  lib.rs
crates/cargo-runner/wit/: cargo-runner.wit
crates/cli/: Cargo.toml
crates/cli/src/: main.rs
crates/core/: Cargo.toml
crates/core/examples/: download.rs  find.rs  get_and_set_default_context.rs  get_set_defaults.rs  init.rs  load.rs  merge.rs  pluck.rs  reset.rs
crates/core/src/entities/: cargo_runner.rs  command_config.rs  command_type.rs  config.rs  context.rs  mod.rs
crates/core/src/models/: mod.rs
crates/vscode/: package-lock.json
crates/vscode/src/: lib.rs
src/: cargoRunner.ts  config.rs  config_builder.rs  errors.rs  global.rs  helper.rs  helpers.rs  lib.rs  main.rs  types.rs  validation.rs  validator.rs
src/builders/: cargo_config_builder.rs  config.rs  mod.rs
src/models/: cargo.rs  cargo_context.rs  command_config.rs  command_details.rs  command_type.rs  config.rs  context.rs  context_type.rs  mod.rs
tests/: config_test.rs
vscode/: package.json
vscode/src/: extension.ts
