[package]
name = "cargo-runner"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]


[dependencies]
clap = "4.5.20"
dirs = "5.0.1"
lazy_static = "1.5.0"
once_cell = "1.20.2"
serde = { version = "1.0.214", features = ["derive"] }
tempfile = "3.13.0"
toml = "0.8.19"
wit-bindgen = "0.34.0"